@@ -45,6 +45,7 @@ All (GUI):
 - Added on-demand image loading option to wxRTC.
 - Add wxFont::GetBaseFont() (Melroy Tellis).
 - Update included Scintilla to version 3.3.9 (Christian Walther).
+- Add wxStyledTextCtrl copy/paste text events (Christian Walther).
 - Add support for loading old V1 BMP files to wxImage (Artur Wieczorek).
 - Improve auto sizing of wrapped cells in wxGrid (iwbnwif).
 - Fix handling of rectangular selections in wxStyledTextCtrl (roberto).
